fix: linker error on std::unordered_map and cmakelist update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.27)  # 3.27+ has best Clang + reflection support
+cmake_minimum_required(VERSION 3.27)
 
 set(CMAKE_CXX_COMPILER /usr/local/bin/clang++)
 set(CMAKE_C_COMPILER /usr/local/bin/clang)
@@ -8,39 +8,33 @@ project(HTTP_Service_Container
     LANGUAGES CXX
 )
 
-# Your exact manual flags — every single one
 add_compile_options(
+    -std=c++26
     -freflection
     -fexpansion-statements
     -fannotation-attributes
     -fparameter-reflection
-    -stdlib=libc++
     -Wall -Wextra -pedantic
 )
 
 add_link_options(
     -stdlib=libc++
-    -lc++
-    -lc++abi
-    -Wl,-rpath,/usr/local/lib
 )
 
 file(GLOB_RECURSE SRC_FILE
     include/**.hpp
     include/**.inl
-    src/**.cpp
+    src/HSC/**.cpp
 )
 
-add_executable(server
+add_library(HSC
     ${SRC_FILE}
 )
 
-set_target_properties(server PROPERTIES
-    BUILD_RPATH_USE_ORIGIN TRUE
-    INSTALL_RPATH "$ORIGIN:/usr/local/lib"
-    LINK_FLAGS "-Wl,-rpath,/usr/local/lib"
+target_include_directories(HSC PUBLIC include)
+
+add_executable(hsc_test
+    src/main.cpp
 )
 
-target_compile_options(server PRIVATE -std=c++26)
-
-target_include_directories(server PRIVATE include)
+target_link_libraries(hsc_test PUBLIC HSC)
